--- a/homepage/homepage.html
+++ b/homepage/homepage.html
@@ -1,28 +1,21 @@
-<!DOCTYPE HTML>
+<!DOCTYPE html>
 <html>
 
 <head>
-<title>Plunder Labs</title>
-
-<script>
-function myprompt() {
-  var person = prompt("Please enter your name","Fred");
-  if (person != "")
-  {
-    document.getElementById("test").innerHTML = "Hello " + person + "! How are you today?";
-  }
-}
-</script>
-
-</head>
+<link rel="stylesheet" type="text/css" href="homepage.css">
 
 <body>
 
-<p> Prompt box. </p>
+<h1>
+PLUNDER LABS <br>
+</h1>
 
-<button onclick="myPrompt()">Click me</button>
-
-<p id="test"></p>
+<h2>
+EVERYTHING IS <br> RELATIVE, AND AI IS <br> GOING TO CHANGE <br> EVERYTHING.
+</h2>
 
 </body>
+
+</head>
+
 </html>
