--- a/homepage/homepage.html
+++ b/homepage/homepage.html
@@ -3,16 +3,19 @@
 
 <head>
 <link rel="stylesheet" type="text/css" href="homepage.css">
-
 <body>
 
 <h1>
-PLUNDER LABS <br>
+Plunder Labs
 </h1>
 
 <h2>
 EVERYTHING IS <br> RELATIVE, AND AI IS <br> GOING TO CHANGE <br> EVERYTHING.
 </h2>
+
+<h3>
+P.L.U.N.D.E.R: POWERFUL LEARNING UNDER NEW DATA <br> ENTERPRISING RESEARCH
+</h3>
 
 </body>
 
