--- a/homepage/homepage.html
+++ b/homepage/homepage.html
@@ -5,17 +5,57 @@
 <link rel="stylesheet" type="text/css" href="homepage.css">
 <body>
 
+
+
 <h1>
+<!-- Inline CSS because we only want the one top left website link to itself to
+not have a blue color or an underline -->
+<a href="https://www.plunderlabs.com/" style="text-decoration: none; color:white">
 Plunder Labs
+</a>
+
+
+<a href="https://www.plunderlabs.com/aboutus" style="text-decoration: none; color:white; float:right; padding: 0px 10px;">
+about us
+</a>
+
+<a href="https://www.plunderlabs.com/psychology" style="text-decoration: none; color:white; float:right; padding: 0px 10px">
+psychology
+</a>
+
+<a href="https://www.plunderlabs.com/news" style="text-decoration: none; color:white; float:right; padding: 0px 10px">
+news
+</a>
+
+<a href="https://www.plunderlabs.com/technical" style="text-decoration: none; color:white; float:right; padding: 0px 10px">
+technical
+</a>
+
+<a href="https://www.plunderlabs.com/research" style="text-decoration: none; color:white; float:right; padding: 0px 10px">
+research
+</a>
+
+<a href="https://www.plunderlabs.com/consulting" style="text-decoration: none; color:white; float:right; padding: 0px 10px">
+consulting
+</a>
+
+<a href="https://www.plunderlabs.com/home" style="text-decoration: none; color:white; float:right; padding: 0px 10px">
+home
+</a>
+
 </h1>
 
 <h2>
-EVERYTHING IS <br> RELATIVE, AND AI IS <br> GOING TO CHANGE <br> EVERYTHING.
-</h2>
-
+EVERYTHING IS <br> RELATIVE, AND AI IS <br> CHANGING EVERYTHING. <br>
+<div style="background-color:rgb(255,102,102); float: center;">
+</div>
 <h3>
 P.L.U.N.D.E.R: POWERFUL LEARNING UNDER NEW DATA <br> ENTERPRISING RESEARCH
 </h3>
+</h2>
+
+
+
 
 </body>
 
