--- a/homepage/homepage.html
+++ b/homepage/homepage.html
@@ -1,47 +1,39 @@
-<!DOCTYPE html>
+<!DOCTYPE>
 <html>
 
 <head>
-  <link rel="stylesheet" type="text/css" href="homepage.css">
+	<title> Plunder Labs </title>
+  <link rel="stylesheet" type="text/css" href="styles.css">
+	<link rel="stylesheet" type="text/css" href="homepage.css">
+  <link href="https://fonts.googleapis.com/css?family=PT+Sans&display=swap" rel="stylesheet">
 </head>
 
-<body>
+<body data-gr-c-s-loaded="true">
+<header>
+  <p> Plunder Labs </p>
 
-<h1>
-<!-- Inline CSS because we only want the one top left website link to itself to
-not have a blue color or an underline -->
-<a href="https://www.plunderlabs.com/" style="text-decoration: none; color:white">
-Plunder Labs
-</a>
+  <nav>
+		<div class="navButton"><a href="homepage.html"> home </a></div>
 
+    <div class="navButton"><a href="https://www.plunderlabs.com/aboutus"> about us </a></div>
 
-<a href="https://www.plunderlabs.com/aboutus" style="text-decoration: none; color:white; float:right; padding: 0px 10px;">
-about us
-</a>
+    <div class="navButton"><a href="news.html"> news </a></div>
 
-<a href="https://www.plunderlabs.com/news" style="text-decoration: none; color:white; float:right; padding: 0px 10px">
-news
-</a>
+    <div class="navButton"><a href="https://www.plunderlabs.com/consulting"> consulting </a></div>
+  </nav>
+</header>
 
-<a href="https://www.plunderlabs.com/consulting" style="text-decoration: none; color:white; float:right; padding: 0px 10px">
-consulting
-</a>
+	<div class="intro"
+		<h2 style="color:rgb(20,40,59);font-size:75px;line-height:70px;text-align:center;">
+			EVERYTHING IS <br> RELATIVE, AND AI IS <br> CHANGING EVERYTHING. <br>
+		</h2>
 
-<a href="https://www.plunderlabs.com/home" style="text-decoration: none; color:white; float:right; padding: 0px 10px">
-home
-</a>
+		<hr width="50%">
 
-</h1>
-
-<h2>
-EVERYTHING IS <br> RELATIVE, AND AI IS <br> CHANGING EVERYTHING. <br>
-<div style="background-color:rgb(255,102,102); float: center;">
-</div>
-<h3>
-P.L.U.N.D.E.R: POWERFUL LEARNING UNDER NEW DATA <br> ENTERPRISING RESEARCH
-</h3>
-</h2>
-
+		<h3 style="color:rgb(20,40,59);font-size:36px;line-height:32px;text-align:center;">
+			P.L.U.N.D.E.R: POWERFUL LEARNING UNDER NEW DATA <br> ENTERPRISING RESEARCH
+		</h3>
+	</div>
 
 
 
